force-app/main/default/objects/Knowledge__kav/fields/Problem_Description__c.field-meta.xml
<CustomField>
    <fullName>Problem_Description__c</fullName>
    <description>What is the customer experiencing?</description>
    <label>Problem Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>