force-app/main/default/objects/Knowledge__kav/fields/Solution_Steps__c.field-meta.xml
<CustomField>
    <fullName>Solution_Steps__c</fullName>
    <description>Step-by-step guide to fix the issue.</description>
    <label>Solution Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>