force-app/main/default/objects/Knowledge__kav/fields/Validation_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Validation_Criteria__c</fullName>
    <description>How does the customer know it is fixed? (Crucial for the Bot later).</description>
    <label>Validation Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>