force-app/main/default/objects/Knowledge__kav/recordTypes/Troubleshooting.recordType-meta.xml
<RecordType>
    <fullName>Troubleshooting</fullName>
    <active>true</active>
    <label>Troubleshooting</label>
    <layouts>
        <layout>Knowledge__kav-Troubleshooting_Layout</layout>
        <recordType>Troubleshooting</recordType>
    </layouts>
</RecordType>